[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "sadypltutility"
version = "1.1.22"
authors = [
  { name="A. M. Sadeghi", email="drsadeghi1997@gmail.com" },
]
description = "Utility functions for all"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/pypa/sadypltutility"
"Bug Tracker" = "https://github.com/pypa/sadypltutility/issues"